--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 <html>
 <head>
 	<title>Web Components</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-	<h1>Web Components</h1>
-	<p>Showcasing a few web components I have created as I study web development at <a href="https://learn.moderndeveloper.com">Modern Developer</a>. I will be enhancing these components with JavaScript. Below is a list of web components that I have created so far.</p>
-	<ul>
-		<li><a href="components/buttons/index.html">Button</a></li>
-		<li><a href="components/calculator/index.html">Calculator</a></li>
-		<li><a href="components/profile-card/index.html">Profile Card</a></li>
-		<li>
-			Forms
-			<ul>
-				<li><a href="components/forms/login.html">Login</a></li>
-			</ul>
-		</li>
-	</ul>
+	<header>
+		<h1>Joseph Michael Matembu</h1>
+		<h2>JavaScript Developer - CP1 at Modern Developer</h2>
+	</header>
+	<div class="container">
+		<h1>Web Components</h1>
+		<p>Showcasing a few web components I have created as I study web development at <a href="https://learn.moderndeveloper.com">Modern Developer</a>. I will be enhancing these components with JavaScript. Below is a list of web components that I have created so far.</p>
+		<ul>
+			<li><a href="components/buttons/index.html">Button</a></li>
+			<li><a href="components/calculator/index.html">Calculator</a></li>
+			<li><a href="components/profile-card/index.html">Profile Card</a></li>
+			<li>
+				Forms
+				<ul>
+					<li><a href="components/forms/login.html">Login</a></li>
+					<li><a href="components/forms/signup.html">Sign UP</a></li>
+					<li><a href="components/forms/search.html">Search</a></li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+		
 </body>
 </html>
