--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 				<li>Forms
 					<ul>
 						<li><a href="components/forms/login.html">Login</a></li>
-						<li><a href="components/forms/signup.html">Sign UP</a></li>
+						<li><a href="components/forms/signup.html">Sign Up</a></li>
 						<li><a href="components/forms/search.html">Search</a></li>
 						<li><a href="components/forms/questionnaire.html">Questionnaire</a></li>
+						<li><a href="components/forms/color-builder.html">Color Builder</a></li>
 					</ul>
 				</li>
 			</ul>
