Add appointment scheduling form

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 						<li><a href="components/forms/questionnaire.html">Questionnaire</a></li>
 						<li><a href="components/forms/color-builder.html">Color Builder</a></li>
 						<li><a href="components/forms/billing.html">Billing and Shipping</a></li>
+						<li><a href="components/forms/appointment.html">Appointment Scheduling</a></li>
+
 					</ul>
 				</li>
 			</ul>
