--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<li><a href="components/forms/color-builder.html">Color Builder</a></li>
 						<li><a href="components/forms/billing.html">Billing and Shipping</a></li>
 						<li><a href="components/forms/appointment.html">Appointment Scheduling</a></li>
-
+						<li><a href="components/forms/payment.html">Credit/Debit Card</a></li>
 					</ul>
 				</li>
 			</ul>
